--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movie-streaming-app",
-  "homepage": "https://github.com/Mukeshchandra82/Movie-Exploration-Web-App/",
+  "homepage": "https://Mukeshchandra82.github.io/Movie-Exploration-Web-App/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
